# threadhamster

./: .gitignore  Dockerfile  README.md  archived_ids.txt  bot.py  debug_ages.py  docker-compose.yml  main.py  pyproject.toml  repair_scan.py  requirements.txt
cogs/: admin_cog.py  lifespan_cog.py  manage_cog.py  manage_ui.py  media_cog.py
database/: db_manager.py
features/: batch.py  lifespan.py  manage.py  media.py
tests/: test_cogs.py  test_forum_exclusion.py  test_manage_logic.py  test_manage_ui.py  test_media_enforcement.py  test_media_logic.py
utils/: embeds.py  media_utils.py
