[project]
name = "threadhamster"
version = "0.1.0"
description = "Discord Bot for Dynamic Thread Lifespan Management & Auto-Thread/Media-Only Moderation"
authors = [{name = "GnawTech", email = "info@gnawtech.de"}]
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.6.4",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]
ignore = ["E722", "E402", "F841", "B007", "E741", "B904", "F401", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
